--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         Jones Snowboards is the natural evolution of my insatiable passion for snowboarding, wilderness exploration and protecting our planet. If you share these same passions, we make gear for you, no matter where you roam or how you ride. "</p>
         
       </div>
-      <div id="sign"><img src="img/sign.jpeg" alt="Signature of Jeremy Jones"></div>
+      <div id="sign"><img src="img/sign.png" alt="Signature of Jeremy Jones"></div>
     </div>
 
     
