--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
   <div class="social">
     <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
     <a href="sitemap.xml"><i class="fa fa-sitemap"></i></a>
-    <a href="#"><i class="fa fa-file"></i></a>
+    <a href="Dokumentacija.pdf"><i class="fa fa-file"></i></a>
     <a href="https://www.facebook.com/jonessnowboards/"><i class="fa fa-facebook-f"></i></a>
   </div>
   <ul class="list">
