--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Jones Snowboards</title>
+     <meta name="description" content="Explore our high-quality snowboarding gear and accessories. Find the latest trends and innovations in snowboarding at Jones Snowboards.">
+    <meta name="keywords" content="snowboarding, snowboard gear, winter sports, Jones Snowboards, snowboard equipment">   
+   
    <link rel="stylesheet" href="css/style.css" type="text/css">
    <script type="text/javascript" src="js/main.js"></script>
 
