--- a/author.html
+++ b/author.html
@@ -7,6 +7,10 @@
    <link rel="stylesheet" href="css/style.css" type="text/css">
    <script type="text/javascript" src="js/main.js"></script>
 
+    <meta name="description" content="Explore our high-quality snowboarding gear and accessories. Find the latest trends and innovations in snowboarding at Jones Snowboards.">
+    <meta name="keywords" content="snowboarding, snowboard gear, winter sports, Jones Snowboards, snowboard equipment">   
+   
+   
    <meta name="description" content="Explore the top-quality snowboarding gear and accessories at Jones Snowboards. Find the perfect equipment for your snowboarding adventure.">
     <meta name="keywords" content="snowboarding gear, snowboard equipment, winter sports, snowboarding accessories">
     <meta name="author" content="Jones Snowboards">
